<resources>
    <string name="app_name">GimmeCocktail</string>
    <string name="search_cocktail_by_name_title">Search cocktail by name</string>
    <string name="search_cocktail_by_ingredient_title">Search cocktail by ingredient</string>
    <string name="favourites_title">Favourites</string>
    <string name="search_by_name_button_text">by name</string>
    <string name="search_by_ingredient_button_text">by ingredient</string>
    <string name="discover_random_button_text">Discover random</string>
    <string name="favourites_button_text">Favourites</string>
    <string name="logo_content_description">Logo</string>
    <string name="search_cocktails_title">Search cocktails</string>
    <string name="cocktail_thumbnail_picture">Cocktail thumbnail picture</string>
    <string name="ingredients_section_title">Ingredients</string>
    <string name="instructions_section_title">Instructions</string>
    <string name="connection_failed_title">Connection failed</string>
    <string name="connection_failed_message">Cannot connect to the internet... Please check your connection!</string>
    <string name="connection_failed_image_message">Please activate your internet connection to see the picture</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_cocktail_name_title">Name</string>
    <string name="widget_cocktail_name_text">Cocktail name</string>
    <string name="widget_cocktail_ingredients_text">Cocktail ingredients</string>
    <string name="widget_cocktail_ingredients_title">Ingredients</string>
    <string name="database_connection_error_title">Database connection error</string>
    <string name="database_connection_error_message">An error occurred while contacting the database</string>
</resources>
