<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="cocktail"
            type="com.gimmecocktail.model.Cocktail" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorSecondaryVariant"
        android:orientation="vertical"
        android:padding="@dimen/widget_margin" >

        <ImageView
            android:id="@+id/widget_cocktail_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cocktail_thumbnail_picture"
            android:elevation="10dp"
            app:srcCompat="@android:drawable/screen_background_light_transparent" />

        <TextView
            android:id="@+id/widget_cocktail_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/widget_cocktail_name_title"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_cocktail_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/widget_cocktail_name_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/widget_cocktail_ingredients_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/widget_cocktail_ingredients_title"
            android:textAlignment="center"
            android:textColor="@color/colorOnPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/widget_cocktail_ingredients_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/widget_cocktail_ingredients_text"
            android:textSize="18sp" />

    </LinearLayout>

</layout>